Fixed some layout issues on listing technologies used at BO

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -590,7 +590,9 @@ padding-right: 10px;
 
 .work-length{
   display: block !important;
-  font-size: 85%;
+  font-size: 100%;
+  color: #3AAA64;
+  padding-bottom: 10px;
 }
 
 .work-project-title{
